@@ -2,6 +2,7 @@ Changelog for AdvSearch
 
 AdvSearch dev
 -------------------
+- [#67] apply addJs=0
 - add plugin to index/remove resource from solr's index
 - fix example of solr's schema
 - fix paging getting value from queryHook
